--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li class="link"><a href="self_portrait_2">Self Portrait Version 2</a></li>
         <li class="link"><a href="self_portrait_3">Self Portrait Version 3</a></li>
       </ul>
-        <img src="wolf-2846317_960_720.jpg">
+        <img src="https://cdn.pixabay.com/photo/2017/10/12/22/53/wolf-2846317_960_720.jpg">
     </div>
   </body>
 </html>
