--- a/Self_portrait_folder/index.html
+++ b/Self_portrait_folder/index.html
@@ -1,19 +1,16 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>MMP 210</title>
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="container">
-        <h1>Welcome to my website :)</h1>
-      <ul>
-        <li class="link"><a href="../">Home</a></li>
-        </ul>
-    </div>
-      <script src="p5.min.js"></script>
-        <script src="sketch.js"></script>
-
-  </body>
+<head>
+	<title>MMP 210 Homepage</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8">
+</head>
+<body id="home">
+	<h1>Self Portrait</h1>
+	<ul>
+		<li class="link"><a href="../">Home</a></li>
+	</ul>
+	<script src="p5.min.js"></script>
+	<script src="sketch.js"></script>
+</body>
 </html>
