--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <h1>Welcome to my website :)</h1>
       <p>This is my <a href="http://owenroberts.github.io/mmp210/" target="blank">MMP 210</a> portfolio.</p>
       <ul>
-        <li class="link"><a href="Self_portrait_folder">Self Portrait Version 1</a></li>
-          <li class="link"><a href="self_portrait_2">Self Portrait Version 2</a></li>
-        <li class="link"><a href="self_portrait_3">Self Portrait Version 3</a></li>
+        <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
+          <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
+        <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
       </ul>
         <img src="wolf-2846317_960_720.jpg" >
     </div>
