--- a/Self_portrait_folder3/index.html
+++ b/Self_portrait_folder3/index.html
@@ -11,6 +11,7 @@
       <ul>
         <li class="link"><a href="../index.html">Home</a></li>
         </ul>
+        <h2> move the mouse to change the hue </h2>
     </div>
       <script src="p5.min.js"></script>
         <script src="sketch.js"></script>
