Added the meme page and p5

--- a/Memes-Logo/index.html
+++ b/Memes-Logo/index.html
@@ -13,10 +13,11 @@
         <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
           <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
         <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
-          <li class="link"><a href="Meme Version0/index.html">Meme Version 0</a></li>
+          <li class="link"><a href="../../index.html">MEME/LOGO V.0</a></li>
           
       </ul>
-        <img src="wolf-2846317_960_720.jpg" >
     </div>
+      <script src="p5.min.js"></script>
+      <script src="sketch.js"></script>
   </body>
 </html>
