Added an additional link inorder to show the link on the computer

--- a/MemesLogo1/index.html
+++ b/MemesLogo1/index.html
@@ -14,7 +14,7 @@
           <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
         <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
           <li class="link"><a href="../../index.html">MEME/LOGO V.0</a></li>
-          
+          <li class="link"><a href="index.html">MEME/LOGO V.2</a></li>
       </ul>
     </div>
       <script src="p5.min.js"></script>
