--- a/Memes-Logo/index.html
+++ b/Memes-Logo/index.html
@@ -13,7 +13,8 @@
         <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
           <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
         <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
-          <li class="link"><a href="../../index.html">MEME/LOGO V.0</a></li>
+          <li class="link"><a href="index.html">MEME/LOGO V.0</a></li>
+          <li class="link"><a href="../MemesLogo1/index.html">MEME/LOGO V.2</a></li>
           
       </ul>
     </div>
