--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
           <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
         <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
-          <li class="link"><a href="MemesLogo1/index.html">MEME/LOGO V.0</a></li>
+          <li class="link"><a href="Memes-Logo/index.html">MEME/LOGO V.0</a></li>
+          <li class="link"><a href="MemesLogo1/index.html">MEME/LOGO V.2</a></li>
       </ul>
         <img src="wolf-2846317_960_720.jpg" >
     </div>
