--- a/Memes-Logo/index.html
+++ b/Memes-Logo/index.html
@@ -10,11 +10,8 @@
       <h1>Welcome to my website :)</h1>
       <p>This is my <a href="http://owenroberts.github.io/mmp210/" target="blank">MMP 210</a> portfolio.</p>
       <ul>
-        <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
-          <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
-        <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
-          <li class="link"><a href="index.html">MEME/LOGO V.0</a></li>
-          <li class="link"><a href="../MemesLogo1/index.html">MEME/LOGO V.2</a></li>
+                    <li class="link"><a href="../">Home</a></li>
+
           
       </ul>
     </div>
