--- a/MemesLogo1/index.html
+++ b/MemesLogo1/index.html
@@ -1,23 +1,22 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>MMP 210</title>
     <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="container">
-      <h1>Welcome to my website :)</h1>
-      <p>This is my <a href="http://owenroberts.github.io/mmp210/" target="blank">MMP 210</a> portfolio.</p>
-      <ul>
-        <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
-          <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
-        <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
-          <li class="link"><a href="../../index.html">MEME/LOGO V.0</a></li>
-          <li class="link"><a href="index.html">MEME/LOGO V.2</a></li>
-      </ul>
+        <h1>Welcome to my website :)</h1>
+        <p>This is my <a href="http://owenroberts.github.io/mmp210/" target="blank">MMP 210</a> portfolio.</p>
+        <ul>
+            <li class="link"><a href="../">Home</a></li>
+        </ul>
     </div>
-      <script src="p5.min.js"></script>
-      <script src="sketch.js"></script>
-  </body>
+    <script src="p5.min.js"></script>
+    <script src="sketch.js"></script>
+</body>
+
 </html>
