changed the home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8">
     <title>MMP 210</title>
     <link href="style.css" rel="stylesheet">
@@ -12,11 +11,13 @@
         <h1>Welcome to my website :)</h1>
         <p>This is my <a href="http://owenroberts.github.io/mmp210/" target="blank">MMP 210</a> portfolio.</p>
         <ul>
-            <li class="link"><a href="../">Home</a></li>
-
+            <li class="link"><a href="Self_portrait_folder/index.html">Self Portrait Version 1</a></li>
+            <li class="link"><a href="Self_portrait_folder2/index.html">Self Portrait Version 2</a></li>
+            <li class="link"><a href="Self_portrait_folder3/index.html">Self Portrait Version 3</a></li>
+            <li class="link"><a href="Memes-Logo/index.html">MEME/LOGO V.0</a></li>
+            <li class="link"><a href="MemesLogo1/index.html">MEME/LOGO V.2</a></li>
         </ul>
         <img src="wolf-2846317_960_720.jpg">
     </div>
 </body>
-
 </html>
